crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_hybrid_view_additional_columns2_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "5.06",
      "data": {
        "answer": "The number of ways is \\( 18 \\times 17 \\times 16 = \\boxed{4896} \\)."
      },
      "dataset": "qs_view",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    }
  ]
}
